k8s-manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: books
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /books
        pathType: Prefix
        backend:
          service:
            name: books-service
            port:
              number: 80

      - path: /travel
        pathType: Prefix
        backend:
          service:
            name: travel-service
            port:
              number: 80

      - path: /cars
        pathType: Prefix
        backend:
          service:
            name: cars-service
            port:
              number: 80

      - path: /temple
        pathType: Prefix
        backend:
          service:
            name: temple-service
            port:
              number: 80

      - path: /bike
        pathType: Prefix
        backend:
          service:
            name: bike-service
            port:
              number: 80
